minor changes - warnings

--- a/notebooks/2 - Preparar_modelagem.ipynb
+++ b/notebooks/2 - Preparar_modelagem.ipynb
@@ -58,6 +58,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "import sys\n",
     "import os\n",
     "\n",
